--- a/style.css
+++ b/style.css
@@ -99,4 +99,43 @@ header{
 
 /* ================================================================== */
 
+.info{
+    background-color: white;
+    margin: 0 !important;
+    padding-left: 14rem;
+    padding-right: 14rem;
+    text-align: center;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.info h1{
+    font-size: 32px;
+    font-weight: bolder;
+}
+
+.info-card{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
+
+.info-card-2{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+
+.info-card-inner{
+    height: 13rem;
+    width: 13rem;
+    border: 4px solid #3882F6;
+    border-radius: 0.5rem;
+}
+
+
+
+/* ================================================================== */
+
 
