--- a/style.css
+++ b/style.css
@@ -138,4 +138,70 @@ header{
 
 /* ================================================================== */
 
+.quotes{
+    background-color: #e5e7eb;
+    margin: 0 !important;
+    padding-left: 14rem;
+    padding-right: 14rem;
+    text-align: justify;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
 
+.quotes p{
+    font-size: 36px;
+    font-weight: lighter !important;
+    font-style: italic;
+    line-height: 1.2;
+}
+.quotes h3{
+    text-align: right;
+}
+
+
+/* ================================================================== */
+
+.action{
+    background-color: white;
+    margin: 0 !important;
+    padding-left: 14rem;
+    padding-right: 14rem;
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+}
+
+.action-inner{
+    background-color: #3882F6;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 2rem 4rem 2rem 4rem;
+    border-radius: 0.5rem;
+}
+
+.action-text{
+    width: 70%;
+    color: #f9faf8;
+
+}
+
+.action-text h3{
+    line-height: 0.3;
+}
+
+.action-button button{
+    width: 8rem;
+    height: 2rem;
+    border: 2px solid white;
+    background-color: #3882F6;
+    border-radius: 0.3rem;
+}
+
+
+/* ================================================================== */
+
+footer{
+    height: 3rem;
+    text-align: center;
+    color: #e5e7eb;
+}
